# IES

./: README.md
Lab01/: README.md
Lab01/lab1_1/lab1_2/: pom.xml
Lab01/lab1_2/MyWeatherRadar/: Dockerfile  pom.xml
Lab01/lab1_5/AnyCityForecast/: Dockerfile  pom.xml
Lab01/lab1_5/IpmaApiClient/: pom.xml
Lab02/: README.md
Lab02/lab2_1/: pom.xml
Lab02/lab2_2/: docker-compose.yml  pom.xml
Lab02/lab2_2/src/main/webapp/WEB-INF/: web.xml
Lab02/lab2_3/: pom.xml
Lab02/lab2_3/src/main/resources/: application.properties
Lab02/lab2_4/: pom.xml
Lab02/lab2_4/src/main/resources/: application.properties
Lab03/: README.md
Lab03/lab3_1/: pom.xml
Lab03/lab3_2/: pom.xml
Lab03/lab3_2/src/main/resources/: application.properties
Lab03/lab3_3/: docker-compose.yml  pom.xml
Lab04/: README.md
Lab04/lab4_1/: package-lock.json  package.json
Lab04/lab4_1/src/: About.jsx  App.js
Lab04/lab4_2/: index.html  package-lock.json  package.json
Lab04/lab4_2/src/: app.css  app.jsx  main.jsx
Lab04/lab4_3/: index.html  package-lock.json  package.json
Lab04/lab4_3/src/: AddPost.jsx  Post.jsx  main.jsx
Lab04/lab4_4/: docker-compose.yml
Lab04/lab4_4/backend/: Dockerfile  pom.xml
Lab04/lab4_4/frontend/: Dockerfile  index.html  package-lock.json  package.json
Lab04/lab4_4/frontend/src/: App.jsx  QuotesManager.jsx  api.js  index.css
Lab05/: README.md
Lab05/lab5_1/: docker-compose.yml
Lab05/lab5_2/poetry_project/: pyproject.toml
Lab05/lab5_2/poetry_project/poetry_project/: consumer_example.py  producer_example.py
Lab05/lab5_3/kafka_message_broker/: pom.xml
(+66 files in other folders)
