[tool.poetry]
name = "poetry-project"
version = "0.1.0"
description = ""
authors = ["martimsantos <santos.martim@ua.pt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
confluent-kafka = "^2.6.1"
pendulum = "^3.0.0"
kafka-python = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
